--- a/main.html
+++ b/main.html
@@ -8,6 +8,30 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form action="">
+		<h1>SignUp Form</h1>
+		<label for="name">Name</label>
+		<input type="text" id="name" value="" required><br>
+		<label for="email">Email</label>
+		<input type="text" id="email" value="" required><br>
+		<label for="gender" >Gender</label>
+		<input type="radio" id="gender" value="M" name="ans" required >Male
+		<input type="radio" id="gender" value="F" name="ans"  required>Female<br><br><br>
+		<label for="cars">Car Brands</label>
+		<select name="" id="cars" required>
+			
+			<option value="B">BMW</option>
+			<option value="A">Audi</option>
+			<option value="M">Mercedez</option>
+		</select><br>
+		<label for="age">Age</label>
+		<input type="number" id="age" required><br>
+		<label for="dob">DOB</label>
+		<input type="date" id="dob" required><br>
+		<label for="password">Password</label>
+		<input type="password" id="password" required><br>
+		<button required>submit button</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
